syntax = "proto2";

package e2e_noa;

message PiecewiseConstFunctionDoubleProto {
  repeated double x = 1;
  repeated double y = 2;
}
